--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -586,6 +586,10 @@ video {
   top: 50%;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -614,6 +618,10 @@ video {
   margin-top: 2rem;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 .block {
   display: block;
 }
@@ -634,16 +642,36 @@ video {
   height: 3rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-\[50px\] {
   height: 50px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .max-h-24 {
   max-height: 6rem;
 }
 
+.max-h-\[70px\] {
+  max-height: 70px;
+}
+
 .min-h-\[100vh\] {
   min-height: 100vh;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .w-auto {
@@ -658,6 +686,10 @@ video {
   max-width: 400px;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .-translate-y-\[50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -667,12 +699,20 @@ video {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
 
 .justify-center {
   justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-3 {
@@ -687,6 +727,10 @@ video {
   border-width: 1px;
 }
 
+.\!border-t-0 {
+  border-top-width: 0px !important;
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -696,9 +740,24 @@ video {
   --tw-border-opacity: 0;
 }
 
+.bg-\[\#11172D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 23 45 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#1E2646\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 38 70 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .p-1 {
@@ -712,6 +771,11 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
 
 .text-center {
@@ -893,6 +957,52 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+}
+
+.sidebar-nav {
+  position: relative;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 0.75rem;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-top-color: rgb(40 48 84 / var(--tw-border-opacity));
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(40 48 84 / var(--tw-border-opacity));
+  padding: 1.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  font-family: 'Regular';
+}
+
+.sidebar-nav::before {
+  position: absolute;
+  left: 0px;
+  height: 100%;
+  width: 0px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(11 129 64 / var(--tw-bg-opacity));
+  transition-duration: 75ms;
+  content: var(--tw-content);
+  transition-timing-function: linear;
+}
+
+.sidebar-nav:hover::before {
+  content: var(--tw-content);
+  width: 0.25rem;
+}
+
+.sidebar-nav.active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 23 45 / var(--tw-bg-opacity));
+}
+
+.sidebar-nav.active::before {
+  content: var(--tw-content);
+  width: 0.25rem;
 }
 
 .hover\:text-white:hover {
