--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -574,8 +574,8 @@ video {
   position: relative;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
+.bottom-6 {
+  bottom: 1.5rem;
 }
 
 .right-4 {
@@ -586,16 +586,36 @@ video {
   top: 50%;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
 .z-10 {
   z-index: 10;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .mt-12 {
@@ -638,6 +658,14 @@ video {
   display: inline-flex;
 }
 
+.h-0 {
+  height: 0px;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -650,12 +678,24 @@ video {
   height: 50px;
 }
 
+.h-\[6px\] {
+  height: 6px;
+}
+
 .h-full {
   height: 100%;
 }
 
 .max-h-24 {
   max-height: 6rem;
+}
+
+.max-h-5 {
+  max-height: 1.25rem;
+}
+
+.max-h-\[6px\] {
+  max-height: 6px;
 }
 
 .max-h-\[70px\] {
@@ -666,12 +706,24 @@ video {
   min-height: 100vh;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
 
 .w-\[200px\] {
   width: 200px;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[calc\(100\%-200px\)\] {
+  width: calc(100% - 200px);
 }
 
 .w-auto {
@@ -719,6 +771,22 @@ video {
   gap: 0.75rem;
 }
 
+.gap-\[10px\] {
+  gap: 10px;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
+.rounded-\[50px\] {
+  border-radius: 50px;
+}
+
 .rounded-\[60px\] {
   border-radius: 60px;
 }
@@ -727,8 +795,25 @@ video {
   border-width: 1px;
 }
 
+.\!border-b-0 {
+  border-bottom-width: 0px !important;
+}
+
 .\!border-t-0 {
   border-top-width: 0px !important;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-none {
+  border-style: none;
+}
+
+.border-\[\#283054\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(40 48 84 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -736,18 +821,26 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-b-\[\#283054\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(40 48 84 / var(--tw-border-opacity));
+}
+
 .border-opacity-0 {
   --tw-border-opacity: 0;
 }
 
-.bg-\[\#11172D\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 23 45 / var(--tw-bg-opacity));
+.bg-\[\#11172d\]\/60 {
+  background-color: rgb(17 23 45 / 0.6);
 }
 
 .bg-\[\#1E2646\] {
   --tw-bg-opacity: 1;
   background-color: rgb(30 38 70 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-white {
@@ -760,6 +853,11 @@ video {
      object-fit: contain;
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -768,9 +866,29 @@ video {
   padding: 0.5rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-7 {
@@ -797,6 +915,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -814,6 +937,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 @font-face {
@@ -848,8 +976,33 @@ video {
   font-display: swap;
 }
 
+/* @font-face {
+    font-family: 'Regular';
+    src: url(fonts/MADE-TOMMY-Regular.otf);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Medium';
+    src: url(fonts/MADE-TOMMY-Medium.otf);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Bold';
+    src: url(fonts/MADE-TOMMY-Bold.otf);
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Light';
+    src: url(fonts/MADE-TOMMY-Light.otf);
+    font-display: swap;
+} */
+
 .font-regular {
   font-family: 'Regular';
+  font-weight: 400;
 }
 
 .font-medium {
@@ -891,10 +1044,10 @@ body {
   display: block;
   font-size: 0.75rem;
   line-height: 1rem;
-  font-weight: 400;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
   font-family: 'Regular';
+  font-weight: 400;
 }
 
 @media (min-width: 768px) {
@@ -963,6 +1116,7 @@ body {
   position: relative;
   display: flex;
   width: 100%;
+  cursor: pointer;
   align-items: center;
   gap: 0.75rem;
   border-top-width: 1px;
@@ -976,6 +1130,7 @@ body {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
   font-family: 'Regular';
+  font-weight: 400;
 }
 
 .sidebar-nav::before {
@@ -1005,9 +1160,29 @@ body {
   width: 0.25rem;
 }
 
+.sidebar-nav.open span + * img
+{
+  transform: rotate(180deg);
+}
+
+.placeholder\:text-white::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-white::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:before\:w-1::before {
+  content: var(--tw-content);
+  width: 0.25rem;
 }
 
 @media (min-width: 768px) {
@@ -1111,4 +1286,4 @@ body {
   .\32xl\:max-h-48 {
     max-height: 12rem;
   }
-}
+} 
