--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -536,12 +536,18 @@ video {
 
 .btn-theme {
   height: 45px;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  white-space: nowrap;
   border-radius: 50px;
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
   --tw-gradient-from: #0b8140 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(11 129 64 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
   --tw-gradient-to: #0a5229 var(--tw-gradient-to-position);
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
   font-size: 0.75rem;
   line-height: 1rem;
   font-weight: 700;
@@ -549,7 +555,15 @@ video {
   letter-spacing: 0.025em;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
   font-family: 'Bold';
+}
+
+.btn-theme:active {
+  --tw-scale-x: .97;
+  --tw-scale-y: .97;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media (min-width: 768px) {
@@ -559,7 +573,7 @@ video {
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .btn-theme {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -574,8 +588,20 @@ video {
   position: relative;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .bottom-6 {
   bottom: 1.5rem;
+}
+
+.left-\[50\%\] {
+  left: 50%;
 }
 
 .right-4 {
@@ -588,6 +614,43 @@ video {
 
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.col-span-12 {
+  grid-column: span 12 / span 12;
+}
+
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
+
+.col-span-8 {
+  grid-column: span 8 / span 8;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .mb-3 {
@@ -658,6 +721,18 @@ video {
   display: inline-flex;
 }
 
+.table {
+  display: table;
+}
+
+.grid {
+  display: grid;
+}
+
+.aspect-\[16\/6\] {
+  aspect-ratio: 16/6;
+}
+
 .h-0 {
   height: 0px;
 }
@@ -666,8 +741,16 @@ video {
   height: 2.5rem;
 }
 
+.h-11 {
+  height: 2.75rem;
+}
+
 .h-12 {
   height: 3rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-5 {
@@ -682,6 +765,10 @@ video {
   height: 6px;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-full {
   height: 100%;
 }
@@ -694,6 +781,10 @@ video {
   max-height: 1.25rem;
 }
 
+.max-h-\[14px\] {
+  max-height: 14px;
+}
+
 .max-h-\[6px\] {
   max-height: 6px;
 }
@@ -702,12 +793,20 @@ video {
   max-height: 70px;
 }
 
+.max-h-\[calc\(100vh-75px\)\] {
+  max-height: calc(100vh - 75px);
+}
+
 .min-h-\[100vh\] {
   min-height: 100vh;
 }
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
 
 .w-5 {
@@ -734,12 +833,45 @@ video {
   width: 100%;
 }
 
+.min-w-full {
+  min-width: 100%;
+}
+
 .max-w-\[400px\] {
   max-width: 400px;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
+.max-w-\[250px\] {
+  max-width: 250px;
+}
+
+.max-w-\[220px\] {
+  max-width: 220px;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px;
+}
+
+.max-w-\[180px\] {
+  max-width: 180px;
+}
+
 .grow {
   flex-grow: 1;
+}
+
+.-translate-x-\[50\%\] {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-y-\[50\%\] {
@@ -747,8 +879,25 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[50\%\] {
+  --tw-translate-y: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.place-content-center {
+  place-content: center;
 }
 
 .items-start {
@@ -767,6 +916,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -775,8 +928,31 @@ video {
   gap: 10px;
 }
 
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.gap-x-7 {
+  -moz-column-gap: 1.75rem;
+       column-gap: 1.75rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
 .rounded-3xl {
@@ -789,6 +965,14 @@ video {
 
 .rounded-\[60px\] {
   border-radius: 60px;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -821,6 +1005,10 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-white\/5 {
+  border-color: rgb(255 255 255 / 0.05);
+}
+
 .border-b-\[\#283054\] {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(40 48 84 / var(--tw-border-opacity));
@@ -828,10 +1016,6 @@ video {
 
 .border-opacity-0 {
   --tw-border-opacity: 0;
-}
-
-.bg-\[\#11172d\]\/60 {
-  background-color: rgb(17 23 45 / 0.6);
 }
 
 .bg-\[\#1E2646\] {
@@ -846,6 +1030,20 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-\[\#0b8140\] {
+  --tw-gradient-from: #0b8140 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(11 129 64 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[\#0a5229\] {
+  --tw-gradient-to: #0a5229 var(--tw-gradient-to-position);
 }
 
 .object-contain {
@@ -876,6 +1074,11 @@ video {
   padding-right: 2.25rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -896,8 +1099,16 @@ video {
   padding-bottom: 1.75rem;
 }
 
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-\[25px\] {
+  font-size: 25px;
 }
 
 .text-base {
@@ -939,6 +1150,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -964,6 +1179,14 @@ video {
   font-family: 'Bold';
 
   src: url(fonts/Inter-Bold.ttf);
+
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SemiBold';
+
+  src: url(fonts/Inter-SemiBold.ttf);
 
   font-display: swap;
 }
@@ -1017,6 +1240,11 @@ video {
   font-family: 'Light';
 }
 
+.font-semi {
+  font-family: 'SemiBold';
+  font-weight: 600;
+}
+
 .ease-out-back {
   transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
 }
@@ -1034,6 +1262,7 @@ body {
 }
 
 .form-group {
+  position: relative;
   margin-bottom: 1.75rem;
   display: block;
   width: 100%;
@@ -1057,7 +1286,7 @@ body {
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .form-label {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -1084,7 +1313,7 @@ body {
   outline-offset: 2px;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .form-field {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -1160,9 +1389,149 @@ body {
   width: 0.25rem;
 }
 
-.sidebar-nav.open span + * img
+table tr th {
+  height: 3.5rem;
+  white-space: nowrap;
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 38 70 / var(--tw-bg-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  text-align: left;
+  font-size: 13px;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  font-family: 'SemiBold';
+  font-weight: 600;
+}
+
+table tr th:first-child {
+  border-top-left-radius: 0.5rem;
+  padding-left: 1.25rem;
+}
+
+table tr th:last-child {
+  border-top-right-radius: 0.5rem;
+  padding-right: 1.25rem;
+}
+
+@media (min-width: 1200px) {
+  table tr th:first-child {
+    padding-left: 1.5rem;
+  }
+
+  table tr th:last-child {
+    padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 1480px) {
+  table tr th {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  table tr th:first-child {
+    padding-left: 1.75rem;
+  }
+
+  table tr th:last-child {
+    padding-right: 1.75rem;
+  }
+}
+
+table tr th
 {
-  transform: rotate(180deg);
+  /* border border-[#283054] */
+}
+
+table tr td {
+  height: 2.5rem;
+  white-space: nowrap;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  text-align: left;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 300;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  font-family: 'Light';
+}
+
+table tr td:first-child {
+  padding-left: 1.25rem;
+}
+
+table tr td:last-child {
+  padding-right: 1.25rem;
+}
+
+@media (min-width: 1200px) {
+  table tr td {
+    height: 3rem;
+  }
+
+  table tr td:first-child {
+    padding-left: 1.5rem;
+  }
+
+  table tr td:last-child {
+    padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 1480px) {
+  table tr td {
+    height: 3.5rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  table tr td:first-child {
+    padding-left: 1.75rem;
+  }
+
+  table tr td:last-child {
+    padding-right: 1.75rem;
+  }
+}
+
+/* Scroll Bar */
+
+.x-scroll::-webkit-scrollbar {
+  height: 7px;
+  background-color: transparent;
+}
+
+.x-scroll::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+  --tw-gradient-from: #0b8140 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(11 129 64 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #0a5229 var(--tw-gradient-to-position);
+}
+
+.x-scroll::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.y-scroll::-webkit-scrollbar {
+  width: 7px;
+  background-color: transparent;
+}
+
+.y-scroll::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #0b8140 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(11 129 64 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #0a5229 var(--tw-gradient-to-position);
+}
+
+.y-scroll::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 .placeholder\:text-white::-moz-placeholder {
@@ -1175,9 +1544,54 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:top-full::after {
+  content: var(--tw-content);
+  top: 100%;
+}
+
+.after\:pt-2::after {
+  content: var(--tw-content);
+  padding-top: 0.5rem;
+}
+
+.after\:text-xs::after {
+  content: var(--tw-content);
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.after\:text-white::after {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.after\:content-\[\'Optional\'\]::after {
+  --tw-content: 'Optional';
+  content: var(--tw-content);
+}
+
+.hover\:bg-\[\#11172d\]\/60:hover {
+  background-color: rgb(17 23 45 / 0.6);
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:h-auto {
+  height: auto;
+}
+
+.group:hover .group-hover\:rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .group:hover .group-hover\:before\:w-1::before {
@@ -1185,7 +1599,29 @@ body {
   width: 0.25rem;
 }
 
+@media (min-width: 640px) {
+  .sm\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+
+  .sm\:col-span-7 {
+    grid-column: span 7 / span 7;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+
+  .md\:col-span-8 {
+    grid-column: span 8 / span 8;
+  }
+
+  .md\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+
   .md\:mb-6 {
     margin-bottom: 1.5rem;
   }
@@ -1198,19 +1634,32 @@ body {
     max-height: 7rem;
   }
 
+  .md\:gap-x-8 {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 992px) {
   .lg\:absolute {
     position: absolute;
   }
 
   .lg\:right-\[5vw\] {
     right: 5vw;
+  }
+
+  .lg\:col-span-8 {
+    grid-column: span 8 / span 8;
+  }
+
+  .lg\:col-span-4 {
+    grid-column: span 4 / span 4;
   }
 
   .lg\:mb-10 {
@@ -1233,15 +1682,39 @@ body {
     max-height: 8rem;
   }
 
+  .lg\:max-w-full {
+    max-width: 100%;
+  }
+
+  .lg\:pr-5 {
+    padding-right: 1.25rem;
+  }
+
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
+  .xl\:absolute {
+    position: absolute;
+  }
+
+  .xl\:left-9 {
+    left: 2.25rem;
+  }
+
   .xl\:right-\[10vw\] {
     right: 10vw;
+  }
+
+  .xl\:top-7 {
+    top: 1.75rem;
+  }
+
+  .xl\:col-span-8 {
+    grid-column: span 8 / span 8;
   }
 
   .xl\:mb-12 {
@@ -1268,13 +1741,26 @@ body {
     max-height: 10rem;
   }
 
+  .xl\:max-w-\[700px\] {
+    max-width: 700px;
+  }
+
+  .xl\:gap-x-10 {
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+
+  .xl\:pr-20 {
+    padding-right: 5rem;
+  }
+
   .xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
 }
 
-@media (min-width: 1536px) {
+@media (min-width: 1480px) {
   .\32xl\:mb-9 {
     margin-bottom: 2.25rem;
   }
@@ -1286,4 +1772,4 @@ body {
   .\32xl\:max-h-48 {
     max-height: 12rem;
   }
-} 
+}
