--- a/src/input/tailwind.css
+++ b/src/input/tailwind.css
@@ -1,74 +1,97 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.family-thin{
-    font-family: 'tommyThin';
+.family-thin {
+  font-family: "tommyThin";
 }
-.family-light{
-    font-family: 'tommyLight';
+.family-light {
+  font-family: "tommyLight";
 }
-.family-normal{
-    font-family: 'tommy';
+.family-normal {
+  font-family: "tommy";
 }
-.family-medium{
-    font-family: 'tommyMedium';
+.family-medium {
+  font-family: "tommyMedium";
 }
-.family-bold{
-    font-family: 'tommyBold';
+.family-bold {
+  font-family: "tommyBold";
 }
-.family-extrabold{
-    font-family: 'tommyXBold';
+.family-extrabold {
+  font-family: "tommyXBold";
 }
-.family-black{
-    font-family: 'tommyBlack';
+.family-black {
+  font-family: "tommyBlack";
 }
 @layer base {
-    a, button {
-        @apply !outline-none;
-    }
+  a,
+  button {
+    @apply !outline-none;
+  }
 }
 
 @layer components {
-    .smooth {
-        @apply ease-out duration-100
-    }
-    .btn-solid {
-        @apply smooth !outline-none h-[58px] w-auto px-10 flex items-center justify-center bg-zero text-white border border-zero text-xl family-bold rounded-full pb-1 hover:text-mango active:text-zero active:bg-white active:border-mango;
-    }
-    .btn-outline {
-        @apply smooth !outline-none h-[58px] w-auto px-10 flex items-center justify-center bg-transparent text-zero border border-mango text-xl family-bold rounded-full pb-1 hover:text-mango active:bg-zero active:text-white active:border-zero;
-    }
-    .btn-light {
-        @apply smooth !outline-none h-[58px] w-auto px-10 flex items-center justify-center bg-transparent text-zero border border-mango text-xl family-normal rounded-full pb-1 hover:text-mango active:bg-mango active:text-zero active:border-mango;
-    }
-    .dropMenu
-    {
-        @apply bg-white rounded-xl py-3 min-w-[205px] inline-flex flex-col items-start shadow-[0_1px_4px_0_rgba(0,0,0,0.1)]
-    }
-    .dropMenu li
-    {
-        @apply relative leading-tight flex items-center justify-between w-full
-    }
-    .dropMenu li a{
-        @apply text-black text-base family-normal capitalize hover:text-zero w-full py-2 flex items-center justify-between pl-[30px] pr-5 relative after:h-full after:w-4 bg-transparent after:absolute after:left-full
-    }
-    .dropMenu li a:hover{
-        @apply family-medium
-    }
-    .subMenu
-    {
-        @apply bg-white rounded-xl py-3 min-w-[205px] inline-flex flex-col items-start gap-3 shadow-[0_1px_4px_0_rgba(0,0,0,0.1)] absolute left-[calc(100%+12px)] top-2 invisible opacity-0 smooth
-    }
-    .subMenu a{
-        @apply text-black text-base family-normal capitalize hover:text-zero pl-[30px] pr-5
-    }
-    .dropMenu li:hover .subMenu
-    {
-        @apply visible opacity-100 -top-1
-    }
+  .smooth {
+    @apply ease-out duration-100;
+  }
+  .sleek {
+    @apply ease-out duration-300;
+  }
+  .btn-solid {
+    @apply inline-flex smooth !outline-none h-[58px] w-auto px-10 items-center justify-center bg-zero text-white border border-zero text-xl family-bold rounded-full pb-[2px] hover:text-mango active:text-zero active:bg-white active:border-mango;
+  }
+  .btn-outline {
+    @apply inline-flex smooth !outline-none h-[58px] w-auto px-10 items-center justify-center bg-white text-zero border border-mango text-xl family-bold rounded-full pb-[2px] hover:text-mango active:bg-zero active:text-white active:border-zero;
+  }
+  .btn-light {
+    @apply inline-flex smooth !outline-none h-[58px] w-auto px-10 items-center justify-center bg-transparent text-zero border border-mango text-xl family-normal rounded-full pb-[2px] hover:text-mango active:bg-mango active:text-zero active:border-mango;
+  }
+  .navs {
+    @apply flex items-center gap-[30px];
+  }
+  .navs .nav-link {
+    @apply relative after:h-[0px] after:rounded-t-[0px] after:w-[calc(100%+10px)] after:bg-mango after:absolute after:bottom-0 after:left-1/2 after:-translate-x-1/2;
+  }
+  .navs .nav-link.active {
+    @apply after:!h-[5px]  after:!rounded-t-[5px];
+  }
+  .navs .nav-link > a {
+    @apply text-night hover:text-zero text-lg family-normal capitalize w-full py-[34px] flex items-center justify-between relative after:w-full after:h-4 after:bg-transparent after:absolute after:top-full;
+  }
+  .navs .nav-link:hover {
+    @apply after:h-[1px];
+  }
+  .navs .nav-link:hover > a {
+    @apply text-zero;
+  }
+  .navs .nav-link.active > a {
+    @apply family-bold;
+  }
+  .dropMenu {
+    @apply absolute invisible opacity-0 top-[calc(100%+10px)] bg-white rounded-xl py-3 min-w-[205px] inline-flex flex-col items-start shadow-[0_1px_4px_0_rgba(0,0,0,0.1)] smooth group-hover/link:visible group-hover/link:opacity-100 /*group-hover/link:top-[calc(100%+12px)]*/;
+  }
+  .dropMenu li {
+    @apply relative leading-tight flex items-center justify-between w-full;
+  }
+  .dropMenu li a {
+    @apply text-black text-base family-normal capitalize hover:text-zero w-full py-2 flex items-center justify-between pl-[30px] pr-5 relative after:h-full after:w-4 after:bg-transparent after:absolute after:left-full;
+  }
+  /* .dropMenu li a:hover{
+        @apply family-medium -top-[1px]
+    } */
+  .subMenu {
+    @apply bg-white rounded-xl py-3 min-w-[205px] inline-flex flex-col items-start  shadow-[0_1px_4px_0_rgba(0,0,0,0.1)] absolute left-[calc(100%+10px)] top-2 invisible opacity-0 smooth;
+  }
+  .subMenu a {
+    @apply text-black text-base family-normal capitalize hover:text-zero pl-[30px] pr-5;
+  }
+  .dropMenu li:hover > a {
+    @apply text-zero;
+  }
+  .dropMenu li:hover .subMenu {
+    @apply visible opacity-100 /*left-[calc(100%+12px)]*/;
+  }
 
-    /* .bg {
+  /* .bg {
         background-image: url(../images/afterSigninBg.svg);
         background-position: center;
         background-repeat: no-repeat;
@@ -76,51 +99,123 @@
         background-attachment: fixed;
     } */
 
-    /* .pill {
+  /* .pill {
         @apply relative cursor-pointer py-3 px-3 lg:text-[13px] text-xs font-semi text-white bg-[#1E2646] rounded-t-lg bg-gradient-to-b from-[#1E2646] to-[#1E2646] lg:min-w-[170px] min-w-0 text-center sm:col-span-4 col-span-6;
     }
 
     .pill-active {
         @apply from-[#0b8140] to-[#0a5229];
     } */
-
 }
 
 @layer utilities {
-    .ease-out-back {
-        transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
-    }
+  .ease-out-back {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
 
-    .rotate-x-90 {
-        transform: rotateX('90deg');
-    }
+  .rotate-x-90 {
+    transform: rotateX("90deg");
+  }
 
-    .rotate-x-0 {
-        transform: rotateX('0deg');
-    }
+  .rotate-x-0 {
+    transform: rotateX("0deg");
+  }
 
-    /* Scroll Bar */
-    .x-scroll::-webkit-scrollbar {
-        @apply h-[7px] bg-transparent;
-    }
+  /* Scroll Bar */
+  .x-scroll::-webkit-scrollbar {
+    @apply h-[7px] bg-transparent;
+  }
 
-    .x-scroll::-webkit-scrollbar-thumb {
-        @apply bg-gradient-to-b from-[#0b8140] to-[#0a5229] rounded-[50px];
-    }
+  .x-scroll::-webkit-scrollbar-thumb {
+    @apply bg-gradient-to-b from-[#0b8140] to-[#0a5229] rounded-[50px];
+  }
 
-    .x-scroll::-webkit-scrollbar-track {
-        @apply bg-transparent
-    }
+  .x-scroll::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
 
-    .y-scroll::-webkit-scrollbar {
-        @apply w-[7px] bg-transparent;
-    }
+  .y-scroll::-webkit-scrollbar {
+    @apply w-[7px] bg-transparent;
+  }
 
-    .y-scroll::-webkit-scrollbar-thumb {
-        @apply bg-gradient-to-r from-[#0b8140] to-[#0a5229] rounded-[50px];
-    }
+  .y-scroll::-webkit-scrollbar-thumb {
+    @apply bg-gradient-to-r from-[#0b8140] to-[#0a5229] rounded-[50px];
+  }
 
-    .y-scroll::-webkit-scrollbar-track {
-        @apply bg-transparent
-    }
+  .y-scroll::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+}
+
+/* ! Multi Check Drop Down START */
+.multiSelectDropper {
+  @apply relative;
+}
+.multiSelectDropper span {
+  @apply bg-white h-[60px] w-full flex items-center justify-between gap-2 text-[#1d201f] text-base font-medium cursor-pointer transition-[0.1s] duration-[ease-out] select-none rounded-md border-r-[#efeff4] border-r border-solid px-5 shadow-[0px_2px_5px_0px_rgba(0,0,0,0.05)];
+}
+.multiSelectDropper span img {
+  @apply h-[7px] w-auto;
+}
+.multiSelectDropper span.active svg {
+  @apply rotate-180;
+}
+.multiSelectDropper span.active ~ .dropperWrapper {
+  @apply visible opacity-100 scale-100;
+}
+.dropperWrapper {
+  @apply shadow-[0px_2px_5px_0px_rgba(0,0,0,0.05)] border absolute z-50 bg-white min-w-[180px] w-full origin-top invisible opacity-0 transition-[0.1s] duration-[ease-out] px-5 py-6 rounded-[10px] border-solid border-[rgba(212,215,219,0.5019607843)] scale-0 right-0 top-[calc(100%_+_12px)];
+}
+.dropperWrapper .drop-list {
+  @apply flex flex-col items-start gap-[18px] h-auto;
+}
+/* .dropperWrapper .drop-list::-webkit-scrollbar {
+  @apply w-[5px];
+}
+.dropperWrapper .drop-list::-webkit-scrollbar-track {
+  @apply bg-[rgba(212,215,219,0.5019607843)] rounded-[10px];
+} 
+.dropperWrapper .drop-list::-webkit-scrollbar-thumb {
+  @apply bg-[#2cb88b] rounded-[10px];
+} */
+.dropperWrapper .drop-list .check {
+  @apply w-full;
+}
+.dropperWrapper .drop-list label {
+  @apply relative pl-[30px] text-black flex text-[17px] family-normal leading-[18px] cursor-pointer m-0 px-0 top-px hover:text-zero before:absolute;
+}
+.dropperWrapper .drop-list label::before 
+{
+  @apply h-[18px] w-[18px] cursor-pointer rounded-[3px] border border-black left-0;
+}
+.dropperWrapper .drop-list input:checked ~ label
+{
+  @apply text-zero family-medium
+}
+.dropperWrapper .drop-list input:checked ~ label::before
+{
+  @apply bg-zero bg-[url(../images/white-check.svg)] border-zero bg-center bg-no-repeat top-1/2 -translate-y-1/2;
+  background-size:12px;
+} 
+.dropperWrapper .drop-list input {
+  @apply hidden;
+}
+/* ! Multi Check Drop Down END*/
+
+/* * Tabs */
+.tabs
+{
+  @apply rounded-[50px] bg-white flex items-center p-2.5
+}
+.tabs .tab-link
+{
+  @apply h-[60px] grow text-xl px-5 rounded-[40px] bg-transparent text-black font-normal
+}
+.tabs .tab-link.active 
+{
+  @apply bg-zero text-white font-bold
+}
+.gradientBg
+{
+  background-image: url(../images/gradientBg.svg);
 }
