--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -942,6 +942,10 @@ a,
   right: -0.75rem;
 }
 
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -980,6 +984,10 @@ a,
 
 .z-\[1\] {
   z-index: 1;
+}
+
+.col-span-12 {
+  grid-column: span 12 / span 12;
 }
 
 .col-span-2 {
@@ -1047,8 +1055,36 @@ a,
   margin-bottom: 0.75rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mb-\[14px\] {
+  margin-bottom: 14px;
+}
+
+.mb-\[30px\] {
+  margin-bottom: 30px;
+}
+
+.mb-\[31px\] {
+  margin-bottom: 31px;
+}
+
+.mb-\[62px\] {
+  margin-bottom: 62px;
 }
 
 .ml-12 {
@@ -1139,8 +1175,16 @@ a,
   height: 6rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-7 {
   height: 1.75rem;
+}
+
+.h-\[123px\] {
+  height: 123px;
 }
 
 .h-\[21px\] {
@@ -1151,8 +1195,20 @@ a,
   height: 45%;
 }
 
+.h-\[567px\] {
+  height: 567px;
+}
+
 .h-\[60px\] {
   height: 60px;
+}
+
+.h-\[65px\] {
+  height: 65px;
+}
+
+.h-\[auto\] {
+  height: auto;
 }
 
 .h-auto {
@@ -1163,24 +1219,20 @@ a,
   height: 100%;
 }
 
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[200px\] {
-  height: 200px;
-}
-
-.h-\[150px\] {
-  height: 150px;
-}
-
 .w-20 {
   width: 5rem;
 }
 
 .w-24 {
   width: 6rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-\[123px\] {
+  width: 123px;
 }
 
 .w-\[1px\] {
@@ -1197,6 +1249,22 @@ a,
 
 .w-\[45px\] {
   width: 45px;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[65px\] {
+  width: 65px;
+}
+
+.w-\[82\.5px\] {
+  width: 82.5px;
+}
+
+.w-\[875px\] {
+  width: 875px;
 }
 
 .w-auto {
@@ -1306,6 +1374,14 @@ a,
   border-radius: 200px;
 }
 
+.rounded-\[24px\] {
+  border-radius: 24px;
+}
+
+.rounded-\[32px\] {
+  border-radius: 32px;
+}
+
 .rounded-\[50px\] {
   border-radius: 50px;
 }
@@ -1351,6 +1427,11 @@ a,
   border-color: rgb(232 232 232 / var(--tw-border-opacity));
 }
 
+.border-\[\#EEEEEE\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(238 238 238 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -1359,6 +1440,11 @@ a,
 .bg-\[\#E6CCC0\] {
   --tw-bg-opacity: 1;
   background-color: rgb(230 204 192 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FFF8F4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 248 244 / var(--tw-bg-opacity));
 }
 
 .bg-mango {
@@ -1383,6 +1469,11 @@ a,
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-zero {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 63 188 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1419,14 +1510,43 @@ a,
   padding: 1.25rem;
 }
 
+.p-\[60px\] {
+  padding: 60px;
+}
+
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-\[29px\] {
+  padding-left: 29px;
+  padding-right: 29px;
+}
+
+.px-\[50px\] {
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .px-\[90px\] {
@@ -1454,17 +1574,34 @@ a,
   padding-bottom: 1.5rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
+.py-\[19px\] {
+  padding-top: 19px;
+  padding-bottom: 19px;
 }
 
 .pb-32 {
   padding-bottom: 8rem;
 }
 
+.pb-40 {
+  padding-bottom: 10rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-\[50px\] {
+  padding-bottom: 50px;
+}
+
+.pb-\[51px\] {
+  padding-bottom: 51px;
 }
 
 .pb-\[90px\] {
@@ -1475,8 +1612,20 @@ a,
   padding-left: 1.25rem;
 }
 
+.pl-\[44px\] {
+  padding-left: 44px;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
 .pr-\[2px\] {
   padding-right: 2px;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pt-24 {
@@ -1487,12 +1636,12 @@ a,
   padding-top: 2px;
 }
 
-.pt-\[60px\] {
-  padding-top: 60px;
+.pt-\[46px\] {
+  padding-top: 46px;
 }
 
-.pb-40 {
-  padding-bottom: 10rem;
+.pt-\[60px\] {
+  padding-top: 60px;
 }
 
 .text-center {
@@ -1509,12 +1658,20 @@ a,
   line-height: 2.25rem;
 }
 
+.text-\[22px\] {
+  font-size: 22px;
+}
+
 .text-\[30px\] {
   font-size: 30px;
 }
 
 .text-\[40px\] {
   font-size: 40px;
+}
+
+.text-\[50px\] {
+  font-size: 50px;
 }
 
 .text-\[60px\] {
@@ -1600,6 +1757,24 @@ a,
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-\[0px_4px_4px_0px_rgba\(0\2c 0\2c 0\2c 0\.025\)\] {
+  --tw-shadow: 0px 4px 4px 0px rgba(0,0,0,0.025);
+  --tw-shadow-colored: 0px 4px 4px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_5px_10px_0px_rgba\(0\2c 0\2c 0\2c 0\.05\)\] {
+  --tw-shadow: 0px 5px 10px 0px rgba(0,0,0,0.05);
+  --tw-shadow-colored: 0px 5px 10px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_5px_15px_0px_rgba\(0\2c 0\2c 0\2c 0\.05\)\] {
+  --tw-shadow: 0px 5px 15px 0px rgba(0,0,0,0.05);
+  --tw-shadow-colored: 0px 5px 15px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .\!outline-none {
   outline: 2px solid transparent !important;
   outline-offset: 2px !important;
@@ -1607,6 +1782,10 @@ a,
 
 .outline {
   outline-style: solid;
+}
+
+.outline-0 {
+  outline-width: 0px;
 }
 
 .\!ring-0 {
@@ -1880,6 +2059,18 @@ a,
   background-image: url(../images/gradientBg.svg);
 }
 
+.videoBg{
+  background-image: url(../images/videoBanner.png);
+}
+
+.getstartedBanner{
+  background-image:url(../images/getstartedbanner.svg);
+}
+
+.getstartedBanner2{
+  background-image:url(../images/getstartedbanner2.svg);
+}
+
 .hover\:-top-2:hover {
   top: -0.5rem;
 }
@@ -1892,10 +2083,6 @@ a,
 .hover\:text-mango:hover {
   --tw-text-opacity: 1;
   color: rgb(254 187 36 / var(--tw-text-opacity));
-}
-
-.group\/study:hover .group-hover\/study\:aspect-\[2\/1\] {
-  aspect-ratio: 2/1;
 }
 
 .group\/study:hover .group-hover\/study\:h-10 {
@@ -1916,16 +2103,6 @@ a,
 
 .group\/banner:hover .group-hover\/banner\:translate-y-\[80\%\] {
   --tw-translate-y: 80%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group\/study:hover .group-hover\/study\:translate-y-1\/2 {
-  --tw-translate-y: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group\/study:hover .group-hover\/study\:-translate-y-1\/2 {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
